# caesium-image-compressor

./: .eslintrc.js  .gitignore  CMakeLists.txt  Info.plist  README.md  package-lock.json  package.json  postcss.config.js  vue.config.js
locale/: en_US.ts
public/: index.html
src/: App.vue  background.js  compressor.js  main.cpp  main.js  mainwindow.cpp  store.js  worker.js
src/assets/css/: main.css
src/components/: ProgressBar.vue
src/models/: CImage.js
src/store/modules/: Compressor.js
src/utils/: utils.js  variables.js
src/views/: Home.vue
views/: mainwindow.ui
